--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p>We only provide great products combined with excellent customer service.
             See what our satisfied customers are saying about our services.</p>
         </section>
-        <section class="social-rating">
+        <div class="social-rating">
           <ul>
             <li class="social-review rating-1">
               <div class="social-star">
@@ -54,10 +54,10 @@
               <a href="#">Rated 5 Stars in BestTech</a>
             </li>
           </ul>
-        </section>  
+        </div>  
       </div>
-      <section class="social-buyers">
-        <article class="social-buyer buyer-1">
+      <div class="social-buyers">
+        <div class="social-buyer buyer-1">
           <header>
             <div class="social-pic-container">
               <img src="./images/image-colton.jpg" alt="" aria-hidden="true" class="social-buyer-pic">
@@ -72,8 +72,8 @@
             Not only did they find the original order, but we also received it in time.
             Excellent!"
           </p>
-        </article>
-        <article class="social-buyer buyer-2">
+        </div>
+        <div class="social-buyer buyer-2">
           <header>
             <div class="social-pic-container">
               <img src="./images/image-irene.jpg" alt="" aria-hidden="true" class="social-buyer-pic">
@@ -87,8 +87,8 @@
             "Customer service is always excellent and very quick turn around. Completely
             delighted with the simplicity of the purchase and the speed of delivery."
           </p>
-        </article>
-        <article class="social-buyer buyer-3">
+        </div>
+        <div class="social-buyer buyer-3">
           <header>
             <div class="social-pic-container">
               <img src="./images/image-anne.jpg" alt="" aria-hidden="true" class="social-buyer-pic">
@@ -102,8 +102,8 @@
             "Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone!"
           </p>
-        </article>
-      </section>
+        </div>
+      </div>
     </main>
     
   </body>
